src/components/PlayerStats/ContentGraphs/FilteredGraphs/FilteredGraphs.module.scss
.filteredGraphsWrapper {
  margin-top: 5px;
  display: flex;
  column-gap: 5px;
}

h3 {
  color: #1a4c96;
  font: 700 1.125rem var(--font-nunito);
}

.title {
  padding: 0 0.5625rem;
  font: 700 0.875rem / 1.5 var(--font-nunito);
  text-align: center;
}

.leftColumnWrapper {
  background-color: #fff;
  flex: 1;
  top: 0;
  position: sticky;
  padding: 0.625rem 0 0.625rem 0.625rem;
  align-self: flex-start;
  max-height: 100vh;
  display: flex;
  flex-direction: column;

  > .header {
    padding-left: 0.4rem;
    position: relative;
  }

  > .body {
    overflow-y: auto;

    &::-webkit-scrollbar {
      width: 6px;
    }

    &::-webkit-scrollbar-track {
      background: white;
    }

    &::-webkit-scrollbar-thumb {
      width: 6px;
      background: #e5e5e5;
      border: 2px solid white;
      border-radius: 5px;
    }
  }
}

.groupItem {
  width: 100%;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  column-gap: 1.5rem;
  position: relative;

  + .groupItem {
    margin-top: 0.35rem;
  }

  > input {
    cursor: pointer;
    appearance: none;

    ~ span {
      position: absolute;
      left: 0;
      top: 50%;
      transform: translateY(-50%);
      width: 14px;
      height: 14px;
      border-radius: 7px;
      border: 1.5px solid #acacac;

      > span {
        display: none;
        width: 7px;
        height: 7px;
        background-color: #1a4c96;
        border-radius: 3.5px;
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
      }
    }

    &:checked {
      accent-color: #1a4c96;
      border-width: 0;
      // appearance: none;

      ~ span {
        border-color: #1a4c96;

        > span {
          display: inline-block;
        }
      }
    }
  }

	.dataValue {
		display: flex;
		align-items: center;
	}
}

.itemBody,
.customItemBody {
  flex: 1;
  display: flex;
  justify-content: space-between;
  background: rgba(#eaeaea, 0.4);
}

.itemBody {
  padding: 2px 0.5625rem 0;
  font: 300 0.875rem / 1.2 var(--font-nunito);
}

.customItemBody {
  padding: 0 1.2rem 0 0.5625rem;
  font: 300 0.875rem / 1.5 var(--font-nunito);
}

.rightColumnWrapper {
  flex: 3;
  display: flex;
  flex-direction: column;
}

* + .graphsBlock {
  margin-top: 5px;
}

.graphsBlock > * + * {
  margin-top: 5px;
}

.twinGraphsWrapper {
	line-height: 0;
	background-color: #fff;
	display: flex;
	flex-wrap: wrap;

	> div {
		width: 50%;

		@media screen and (max-width: 1023px) {
			width: unset;			
		}
	}
}

.tempButton {
  position: absolute;
  right: .5rem;
  top: 50%;
  transform: translateY(-50%);
	background-color: rgb(225, 238, 243);
	border: 1px solid var(--side-color);
	padding: .25rem .5rem;
	border-radius: 5px;
	transition: all .15s;
	box-shadow: 2px 2px 4px 1px #acacac;
	
	&:hover {
		background-color: lightgreen;
	}
}

